2008-04-11  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_nav_item_location.c: Update the width and height when item
	added. 

	* data/themes/images/edit_send.png: Add image as flying menu's bg.

	* src/e_flyingmenu.c: Add a bg_obj.

	* src/widgets/e_nav_textedit.c: Change the theme of button.

	* src/e_nav_item_neo_me.c: Update the width and height when item
	added.

	* data/themes/diversity_nav.edc: Change the theme for button panel.

2008-04-11  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_ctrl.c,
	  src/e_ctrl.h: Change API from self_get/set to neo_me_get/set.

	* src/e_nav_item_location.c: When sending SMS, get equipment directly from ctrl.
	
	* src/e_mod_nav.c: Self bard as one of neo_me_add arguments

	* src/e_nav_item_neo_me.c,
	  src/e_nav_item_neo_me.h: Add Diversity_Bard as a
	  member in neo_me internal structure.

2008-04-11  Jeremy Chang  <jeremy@openmoko.com>

	* src/widgets/e_nav_alert.c,
	  src/widgets/e_nav_alert.h,
	  src/widgets/Makefile.am,
	  data/themes/default.edc,
	  data/themes/Makefile.am,
	  data/themes/default_nav_alert.edc: Add alert widget
	that distinguish from dialog. 
	    
	* data/themes/default_nav_button.edc: Add different size button. 

	* src/e_nav_item_location.c: Change some dialog to alert. Add delete
	confirmed alert before delete confirmed. 

2008-04-11  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_nav_item_location.c: Delete edje object signal callback when location item
	deleted. 

2008-04-11  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c: Always show neo_me on the top of its layer. 
	* src/e_nav_item_neo_me.c: Add 'fixed' member in the structure. 
	* src/e_nav_item_neo_me.h: Add fixed set/get API. 
	* src/e_nav_item_location.c, 
	  data/themes/diversity_nav.edc: Change location object's behavior. Show
	text first, then activate the menu.  

2008-04-10  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c: set free key cb for the hash. 

2008-04-10  Jeremy Chang  <jeremy@openmoko.com>
